# LectureHomeworks

./: .gitignore  CMakeLists.txt  README.md  update_symbols.py
.devcontainer/: Dockerfile
C2.1/: CMakeLists.txt
C2.1/src/: ts.s
C2.2/: CMakeLists.txt
C2.2/src/: ts.s
C2.3/: CMakeLists.txt
C2.3/src/: t.c  ts.s
C2.4/: CMakeLists.txt
C2.4/src/: t.c  ts.s
C2.5/: CMakeLists.txt
C2.5/src/: t.c
C2.6/: CMakeLists.txt  symbol_names_image0.txt  symbol_names_image1.txt  t.ld
C2.6/include/: vid.h
C2.6/src/: t.c  ts.s  vid.c
C2.7/: CMakeLists.txt  t.ld
C2.7/include/: vid.h
C2.7/src/: t.c  vid.c
C3.1/: CMakeLists.txt  t.ld
C3.1/include/: defines.h
C3.1/src/: t.c  timer.c
C3.2/: CMakeLists.txt  t.ld
C3.2/include/: defines.h  kbd.h
C3.2/src/: kbd.c  t.c
C3.3/: CMakeLists.txt  t.ld
C3.3/src/: kbd.c
include/: uart.h  vid.h
src/: string.c  timer.c  uart.c  vid.c
